# flashcard

./: .gitignore  CMakeLists.txt  README.md  TODO.md  application.desktop.in  index.html  package-lock.json  package.json
assets/: application.glade
distrib/: appimage.sh
examples/: debug.csv
src/: common.hpp  configuration.ts  main.cpp  main.ts  parser.cpp  parser.hpp  results.ts  session.ts  utils.cpp  utils.hpp  utils.ts
src/assets/css/: style.css
src/common/: logger.cpp  logger.hpp  parser.cpp  picker.cpp  picker.hpp  structs.cpp  structs.hpp  utils.cpp  utils.hpp
src/comps/: CsvGrid.cpp  CsvGrid.hpp  MainWindow.cpp  MainWindow.hpp  SessionClock.cpp  SessionClock.hpp  SessionWindow.cpp  SessionWindow.hpp
